# esp32-wroom

./: .gitignore  .http  Cargo.toml  build.rs  diagram.json  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
docs/: README.md
scripts/: flash.sh
src/: main.rs  routes.rs  tft.rs  ui.rs
