[package]
name = "esp32-wroom"
version = "0.1.0"
authors = ["José Augusto <josemoura212@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-wroom"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
lto = "thin"        # Link Time Optimization mais rápido
codegen-units = 1   # Menos unidades = mais otimização, build um pouco mais lento mas binário menor

[profile.dev]
debug = 1           # Debug info reduzido (era true = nível 2)
opt-level = "z"     # Mantém otimização máxima para tamanho
incremental = true  # Compilação incremental para builds mais rápidos
lto = "off"         # Sem LTO em dev para velocidade

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.99"
ssd1306 = "0.10.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
esp-idf-sys = { version = "0.36.1", features = ["native", "binstart"] }
esp-idf-hal = "0.45.2"
esp-idf-dht = "^0.1.3"

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"
